# comet-blue-automate

./: Cargo.toml  README.md  SubmittingPatches.rst
src/: app_const.rs  characteristics.rs  cli_clap.rs  comet_blue.rs  fern_setup.rs  main.rs
