[package]
name = "comet-blue-automate"
version = "0.1.0"
authors = ["Owen Synge <owen.synge@jaysnest.de>"]
edition = "2018"

[dependencies]
clap = "2"
# Using fork of rumble to work around https://github.com/mwylde/rumble/issues/34
rumble = { git = "https://github.com/osynge/rumble.git", branch = "issues_34" }
rand = "*"
chrono = "*"
serde_derive = "*"
serde = "*"
serde_json = "*"
