[package]
name = "comet-blue-automate"
version = "0.1.0"
authors = ["Owen Synge <owen.synge@jaysnest.de>"]
edition = "2018"

[dependencies]
clap = "2"
log = "0.4"
fern = "0.5"
rumble = { git = "https://github.com/mwylde/rumble.git", branch = "master" }

rand = "*"
chrono = "*"
serde_derive = "*"
serde = "*"
serde_json = "*"
